Added and updated a bunch of functionality. - Added serverless deployment automation CLI scripts - Updated the API client handler to be more flexible - Added functionality to add users from the blockade-cfg tool - Slight file adjustments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
-future
-grequests==0.3.1
-requests==2.10.0
+args==0.1.0
+blockade-toolkit==1.0.1
+boto3==1.5.7
+botocore==1.8.21
+clint==0.5.1
+docutils==0.14
+ez-setup==0.9
+future==0.16.0
+futures==3.2.0
+gevent==1.2.0
+greenlet==0.4.11
+grequests==0.3.0
+idna==2.2
+jmespath==0.9.3
+pkginfo==1.4.1
+python-dateutil==2.6.1
+requests==2.12.4
+requests-file==1.4.1
+requests-toolbelt==0.7.0
+s3transfer==0.1.12
+six==1.10.0
 tldextract==2.0.2
+twine==1.8.1
