--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
+# Python
 *.pyc
+# Editor
 *\.sw[a-z]
+# Setuptools 'develop' target
 *.egg-info/
 build/
 dist/
 setuptools-*
 venv/
+venv3/
 .pypirc
+.notes
 *.DS_Store
-*.notes
+.DS_Store*
