--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+alabaster==0.7.11
 args==0.1.0
-blockade-toolkit==1.0.1
-boto3==1.5.7
-botocore==1.8.21
+Babel==2.6.0
+blockade-toolkit==1.1.4
+boto3==1.5.22
+botocore==1.8.36
+certifi==2017.11.5
+chardet==3.0.4
 clint==0.5.1
 docutils==0.14
 ez-setup==0.9
@@ -10,14 +14,28 @@ futures==3.2.0
 gevent==1.2.0
 greenlet==0.4.11
 grequests==0.3.0
-idna==2.2
+idna==2.6
+imagesize==1.0.0
+Jinja2==2.10
 jmespath==0.9.3
+MarkupSafe==1.0
+packaging==17.1
 pkginfo==1.4.1
+Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
-requests==2.12.4
-requests-file==1.4.1
-requests-toolbelt==0.7.0
+pytz==2018.5
+requests==2.18.4
+requests-file==1.4.3
+requests-toolbelt==0.8.0
 s3transfer==0.1.12
-six==1.10.0
-tldextract==2.0.2
-twine==1.8.1
+six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.5
+sphinx-rtd-theme==0.4.0
+sphinxcontrib-websupport==1.1.0
+tldextract==2.2.0
+tqdm==4.19.5
+twine==1.9.1
+typing==3.6.4
+urllib3==1.22
